--- a/index.css
+++ b/index.css
@@ -1,38 +1,40 @@
 body {
   background-color: #87ccdd;
 }
-.btn{
+.btn {
   cursor: pointer;
 }
 body {
   color: white;
   transition: color 0.5s ease-in-out;
   text-align: center;
+  margin-top: 200px;
 }
 
-.clicked{
-  color:#7f8c8d;
+.clicked {
+  color: #7f8c8d;
 }
 
 .form,
-.greetings{
-  display:none;
+.greetings {
+  display: none;
 }
 
-.showing{
+.showing {
   display: block;
+  font-size: 20px;
 }
 
-@keyframes fadeIn{
-  from{
-    opacity:0;
+@keyframes fadeIn {
+  from {
+    opacity: 0;
   }
-  to{
+  to {
     opacity: 1;
   }
 }
 
-.bgImage{
+.bgImage {
   position: absolute;
   top: 0;
   left: 0;
